tests/regression/error/hw4_error11.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY {lft=EXP_BOOL true,opr=BOP_AND,rht=EXP_NUM 1}}]}
  : program
;
